eureka.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ecom-eureka-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ecom-eureka-server
  template:
    metadata:
      labels:
        app: ecom-eureka-server
    spec:
      containers:
      - name: ecom-eureka-server
        image: steeltoeoss/eureka-server
        ports:
        - containerPort: 8761
---
apiVersion: v1
kind: Service
metadata:
  name: eureka-server
spec:
  selector:
    app: ecom-eureka-server
  ports:
  - name: http
    port: 8761
    targetPort: 8761
    # nodePort: 30000
  type: ClusterIP
