order-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: order-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: order-service
  template:
    metadata:
      labels:
        app: order-service
    spec:
      containers:
      - name: order-service
        image: haribhuvan/app:order_ms
        ports:
        - containerPort: 8083
---
apiVersion: v1
kind: Service
metadata:
  name: order-svc
spec:
  selector:
    app: order-service
  ports:
  - name: http
    port: 8083
    targetPort: 8083
  type: ClusterIP
