payment-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: payment-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: payment-service
  template:
    metadata:
      labels:
        app: payment-service
    spec:
      containers:
      - name: payment-service
        image: haribhuvan/app:payment_ms
        ports:
        - containerPort: 8084
---
apiVersion: v1
kind: Service
metadata:
  name: payment-svc
spec:
  selector:
    app: payment-service
  ports:
  - name: http
    port: 8084
    targetPort: 8084
  type: ClusterIP
