product-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: product-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: product-service
  template:
    metadata:
      labels:
        app: product-service
    spec:
      containers:
      - name: product-service
        image: haribhuvan/app:product_ms
        ports:
        - containerPort: 8082
---
apiVersion: v1
kind: Service
metadata:
  name: product-svc
spec:
  selector:
    app: product-service
  ports:
  - name: http
    port: 8082
    targetPort: 8082
  type: ClusterIP
