user-dep.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: user-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: user-service
  template:
    metadata:
      labels:
        app: user-service
    spec:

      containers:
      - name: user-service
        image: haribhuvan/app:user_ms
        # resources:
        #   requests:
        #     cpu: 0.5k
        #     memory: 150Mi
        #   limits:
        #     cpu: 1k
        #     memory: 150Mi
        ports:
        - containerPort: 8081


---
apiVersion: v1
kind: Service
metadata:
  name: user-svc
spec:
  selector:
    app: user-service
  ports:
  - name: http
    port: 8081
    targetPort: 8081
  type: ClusterIP
