ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ecom-ing
  labels:
    name: ecom-ing
spec:
  rules:
  - host: ecommerce.com
    http:
      paths:

      - pathType: Exact
        path: /
        backend:
          service:
            name: eureka-server
            port:
              number: 8761

      - pathType: Prefix
        path: /users
        backend:
          service:
            name: user-svc
            port:
              number: 8081

      - pathType: Prefix
        path: /products
        backend:
          service:
            name: product-svc
            port:
              number: 8082

      - pathType: Prefix
        path: /orders
        backend:
          service:
            name: order-svc
            port:
              number: 8083

      - pathType: Prefix
        path: /payments
        backend:
          service:
            name: payment-svc
            port:
              number: 8084
